@@ -1,6 +1,8 @@
 package com.onthegomap.planetiler.geo;
 
 import com.onthegomap.planetiler.collection.LongLongMap;
+import com.onthegomap.planetiler.config.PlanetilerConfig;
+import com.onthegomap.planetiler.stats.Stats;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Stream;
@@ -15,6 +17,8 @@ import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LineSegment;
 import org.locationtech.jts.geom.LineString;
 import org.locationtech.jts.geom.LinearRing;
+import org.locationtech.jts.geom.MultiLineString;
+import org.locationtech.jts.geom.MultiPoint;
 import org.locationtech.jts.geom.MultiPolygon;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
@@ -22,8 +26,10 @@ import org.locationtech.jts.geom.PrecisionModel;
 import org.locationtech.jts.geom.TopologyException;
 import org.locationtech.jts.geom.impl.PackedCoordinateSequence;
 import org.locationtech.jts.geom.impl.PackedCoordinateSequenceFactory;
+import org.locationtech.jts.geom.util.GeometryFixer;
 import org.locationtech.jts.geom.util.GeometryTransformer;
 import org.locationtech.jts.io.WKBReader;
+import org.locationtech.jts.io.WKTReader;
 import org.locationtech.jts.precision.GeometryPrecisionReducer;
 
 /**
@@ -37,18 +43,22 @@ public class GeoUtils {
   /** Rounding precision for 256x256px tiles encoded using 4096 values. */
   public static final PrecisionModel TILE_PRECISION = new PrecisionModel(4096d / 256d);
   public static final GeometryFactory JTS_FACTORY = new GeometryFactory(PackedCoordinateSequenceFactory.DOUBLE_FACTORY);
-  public static final WKBReader WKB_READER = new WKBReader(JTS_FACTORY);
+
   public static final Geometry EMPTY_GEOMETRY = JTS_FACTORY.createGeometryCollection();
+  public static final CoordinateSequence EMPTY_COORDINATE_SEQUENCE = new PackedCoordinateSequence.Double(0, 2, 0);
   public static final Point EMPTY_POINT = JTS_FACTORY.createPoint();
   public static final LineString EMPTY_LINE = JTS_FACTORY.createLineString();
   public static final Polygon EMPTY_POLYGON = JTS_FACTORY.createPolygon();
   private static final LineString[] EMPTY_LINE_STRING_ARRAY = new LineString[0];
   private static final Polygon[] EMPTY_POLYGON_ARRAY = new Polygon[0];
   private static final Point[] EMPTY_POINT_ARRAY = new Point[0];
-  private static final double WORLD_RADIUS_METERS = 6_378_137;
-  public static final double WORLD_CIRCUMFERENCE_METERS = Math.PI * 2 * WORLD_RADIUS_METERS;
+  private static final double WORLD_RADIUS_METERS_AT_EQUATOR = 6_378_137;
+  private static final double AVERAGE_WORLD_RADIUS_METERS = 6_371_008.8;
+  public static final double WORLD_CIRCUMFERENCE_METERS = Math.PI * 2 * WORLD_RADIUS_METERS_AT_EQUATOR;
   private static final double RADIANS_PER_DEGREE = Math.PI / 180;
   private static final double DEGREES_PER_RADIAN = 180 / Math.PI;
+  private static final double LOG2 = Math.log(2);
+  private static final double AREA_FACTOR = AVERAGE_WORLD_RADIUS_METERS * AVERAGE_WORLD_RADIUS_METERS / 2;
   /**
    * Transform web mercator coordinates where top-left corner of the planet is (0,0) and bottom-right is (1,1) to
    * latitude/longitude coordinates.
@@ -243,11 +253,11 @@ public class GeoUtils {
     return JTS_FACTORY.createPoint(coord);
   }
 
-  public static Geometry createMultiLineString(List<LineString> lineStrings) {
+  public static MultiLineString createMultiLineString(List<LineString> lineStrings) {
     return JTS_FACTORY.createMultiLineString(lineStrings.toArray(EMPTY_LINE_STRING_ARRAY));
   }
 
-  public static Geometry createMultiPolygon(List<Polygon> polygon) {
+  public static MultiPolygon createMultiPolygon(List<Polygon> polygon) {
     return JTS_FACTORY.createMultiPolygon(polygon.toArray(EMPTY_POLYGON_ARRAY));
   }
 
@@ -264,24 +274,38 @@ public class GeoUtils {
     }
   }
 
+  /**
+   * More aggressive fix for self-intersections than {@link #fixPolygon(Geometry)} that expands then contracts the shape
+   * by {@code buffer}.
+   *
+   * @throws GeometryException if a robustness error occurred
+   */
+  public static Geometry fixPolygon(Geometry geom, double buffer) throws GeometryException {
+    try {
+      return geom.buffer(buffer).buffer(-buffer);
+    } catch (TopologyException e) {
+      throw new GeometryException("fix_polygon_buffer_topology_error", "robustness error fixing polygon: " + e);
+    }
+  }
+
   public static Geometry combineLineStrings(List<LineString> lineStrings) {
-    return lineStrings.size() == 1 ? lineStrings.get(0) : createMultiLineString(lineStrings);
+    return lineStrings.size() == 1 ? lineStrings.getFirst() : createMultiLineString(lineStrings);
   }
 
   public static Geometry combinePolygons(List<Polygon> polys) {
-    return polys.size() == 1 ? polys.get(0) : createMultiPolygon(polys);
+    return polys.size() == 1 ? polys.getFirst() : createMultiPolygon(polys);
   }
 
   public static Geometry combinePoints(List<Point> points) {
-    return points.size() == 1 ? points.get(0) : createMultiPoint(points);
+    return points.size() == 1 ? points.getFirst() : createMultiPoint(points);
   }
 
   /**
    * Returns a copy of {@code geom} with coordinates rounded to {@link #TILE_PRECISION} and fixes any polygon
    * self-intersections or overlaps that may have caused.
    */
-  public static Geometry snapAndFixPolygon(Geometry geom) throws GeometryException {
-    return snapAndFixPolygon(geom, TILE_PRECISION);
+  public static Geometry snapAndFixPolygon(Geometry geom, Stats stats, String stage) throws GeometryException {
+    return snapAndFixPolygon(geom, TILE_PRECISION, stats, stage);
   }
 
   /**
@@ -290,21 +314,29 @@ public class GeoUtils {
    *
    * @throws GeometryException if an unrecoverable robustness exception prevents us from fixing the geometry
    */
-  public static Geometry snapAndFixPolygon(Geometry geom, PrecisionModel tilePrecision) throws GeometryException {
+  public static Geometry snapAndFixPolygon(Geometry geom, PrecisionModel tilePrecision, Stats stats, String stage)
+    throws GeometryException {
     try {
+      if (!geom.isValid()) {
+        geom = fixPolygon(geom);
+        stats.dataError(stage + "_snap_fix_input");
+      }
       return GeometryPrecisionReducer.reduce(geom, tilePrecision);
-    } catch (IllegalArgumentException e) {
+    } catch (TopologyException | IllegalArgumentException e) {
       // precision reduction fails if geometry is invalid, so attempt
       // to fix it then try again
-      geom = fixPolygon(geom);
+      geom = GeometryFixer.fix(geom);
+      stats.dataError(stage + "_snap_fix_input2");
       try {
         return GeometryPrecisionReducer.reduce(geom, tilePrecision);
-      } catch (IllegalArgumentException e2) {
-        // give it one last try, just in case
-        geom = fixPolygon(geom);
+      } catch (TopologyException | IllegalArgumentException e2) {
+        // give it one last try but with more aggressive fixing, just in case (see issue #511)
+        geom = fixPolygon(geom, tilePrecision.gridSize() / 2);
+        stats.dataError(stage + "_snap_fix_input3");
         try {
           return GeometryPrecisionReducer.reduce(geom, tilePrecision);
-        } catch (IllegalArgumentException e3) {
+        } catch (TopologyException | IllegalArgumentException e3) {
+          stats.dataError(stage + "_snap_fix_input3_failed");
           throw new GeometryException("snap_third_time_failed", "Error reducing precision");
         }
       }
@@ -344,7 +376,7 @@ public class GeoUtils {
     return new PackedCoordinateSequence.Double(coords, 2, 0);
   }
 
-  public static Geometry createMultiPoint(List<Point> points) {
+  public static MultiPoint createMultiPoint(List<Point> points) {
     return JTS_FACTORY.createMultiPoint(points.toArray(EMPTY_POINT_ARRAY));
   }
 
@@ -359,29 +391,29 @@ public class GeoUtils {
     if (lineStrings.isEmpty()) {
       throw new GeometryException("polygon_to_linestring_empty", "No line strings");
     } else if (lineStrings.size() == 1) {
-      return lineStrings.get(0);
+      return lineStrings.getFirst();
     } else {
       return createMultiLineString(lineStrings);
     }
   }
 
   private static void getLineStrings(Geometry input, List<LineString> output) throws GeometryException {
-    if (input instanceof LinearRing linearRing) {
-      output.add(JTS_FACTORY.createLineString(linearRing.getCoordinateSequence()));
-    } else if (input instanceof LineString lineString) {
-      output.add(lineString);
-    } else if (input instanceof Polygon polygon) {
-      getLineStrings(polygon.getExteriorRing(), output);
-      for (int i = 0; i < polygon.getNumInteriorRing(); i++) {
-        getLineStrings(polygon.getInteriorRingN(i), output);
+    switch (input) {
+      case LinearRing linearRing -> output.add(JTS_FACTORY.createLineString(linearRing.getCoordinateSequence()));
+      case LineString lineString -> output.add(lineString);
+      case Polygon polygon -> {
+        getLineStrings(polygon.getExteriorRing(), output);
+        for (int i = 0; i < polygon.getNumInteriorRing(); i++) {
+          getLineStrings(polygon.getInteriorRingN(i), output);
+        }
       }
-    } else if (input instanceof GeometryCollection gc) {
-      for (int i = 0; i < gc.getNumGeometries(); i++) {
-        getLineStrings(gc.getGeometryN(i), output);
+      case GeometryCollection gc -> {
+        for (int i = 0; i < gc.getNumGeometries(); i++) {
+          getLineStrings(gc.getGeometryN(i), output);
+        }
       }
-    } else {
-      throw new GeometryException("get_line_strings_bad_type",
-        "unrecognized geometry type: " + input.getGeometryType());
+      case null, default -> throw new GeometryException("get_line_strings_bad_type",
+        "unrecognized geometry type: " + (input == null ? "null" : input.getGeometryType()));
     }
   }
 
@@ -392,7 +424,7 @@ public class GeoUtils {
   /** Returns a point approximately {@code ratio} of the way from start to end and {@code offset} units to the right. */
   public static Point pointAlongOffset(LineString lineString, double ratio, double offset) {
     int numPoints = lineString.getNumPoints();
-    int middle = Math.max(0, Math.min(numPoints - 2, (int) (numPoints * ratio)));
+    int middle = Math.clamp((int) (numPoints * ratio), 0, numPoints - 2);
     Coordinate a = lineString.getCoordinateN(middle);
     Coordinate b = lineString.getCoordinateN(middle + 1);
     LineSegment segment = new LineSegment(a, b);
@@ -403,22 +435,16 @@ public class GeoUtils {
     return JTS_FACTORY.createPolygon(exteriorRing, rings.toArray(LinearRing[]::new));
   }
 
-
-  /**
-   * Returns {@code false} if the signed area of the triangle formed by 3 sequential points changes sign anywhere along
-   * {@code ring}, ignoring repeated and collinear points.
-   */
-  public static boolean isConvex(LinearRing ring) {
-    return !isConcave(ring);
-  }
-
   /**
    * Returns {@code true} if the signed area of the triangle formed by 3 sequential points changes sign anywhere along
    * {@code ring}, ignoring repeated and collinear points.
    */
-  public static boolean isConcave(LinearRing ring) {
+  public static boolean isConvex(LinearRing ring) {
+    double threshold = 1e-3;
+    double minPointsToCheck = 10;
     CoordinateSequence seq = ring.getCoordinateSequence();
-    if (seq.size() <= 3) {
+    int size = seq.size();
+    if (size <= 3) {
       return false;
     }
 
@@ -427,7 +453,7 @@ public class GeoUtils {
     double c0y = seq.getY(0);
     double c1x = Double.NaN, c1y = Double.NaN;
     int i;
-    for (i = 1; i < seq.size(); i++) {
+    for (i = 1; i < size; i++) {
       c1x = seq.getX(i);
       c1y = seq.getY(i);
       if (c1x != c0x || c1y != c0y) {
@@ -438,29 +464,39 @@ public class GeoUtils {
     double dx1 = c1x - c0x;
     double dy1 = c1y - c0y;
 
-    int sign = 0;
+    double negZ = 1e-20, posZ = 1e-20;
 
-    for (; i < seq.size(); i++) {
-      double c2x = seq.getX(i);
-      double c2y = seq.getY(i);
+    // need to wrap around to make sure the triangle formed by last and first points does not change sign
+    for (; i <= size + 1; i++) {
+      // first and last point should be the same, so skip index 0
+      int idx = i < size ? i : (i + 1 - size);
+      double c2x = seq.getX(idx);
+      double c2y = seq.getY(idx);
 
       double dx2 = c2x - c1x;
       double dy2 = c2y - c1y;
       double z = dx1 * dy2 - dy1 * dx2;
 
-      // if z == 0 (with small delta to account for rounding errors) then keep skipping
-      // points to ignore repeated or collinear points
-      if (Math.abs(z) < 1e-10) {
-        continue;
+      double absZ = Math.abs(z);
+
+      // look for sign changes in the triangles formed by sequential points
+      // but, we want to allow for rounding errors and small concavities relative to the overall shape
+      // so track the largest positive and negative threshold for triangle area and compare them once we
+      // have enough points
+      boolean extendedBounds = false;
+      if (z < 0 && absZ > negZ) {
+        negZ = absZ;
+        extendedBounds = true;
+      } else if (z > 0 && absZ > posZ) {
+        posZ = absZ;
+        extendedBounds = true;
       }
 
-      int s = z >= 0d ? 1 : -1;
-      if (sign == 0) {
-        // on the first non-repeated, non-collinear points, store sign of the area for comparison
-        sign = s;
-      } else if (sign != s) {
-        // the sign of this triangle has changed, not convex
-        return false;
+      if (i == minPointsToCheck || (i > minPointsToCheck && extendedBounds)) {
+        double ratio = negZ < posZ ? negZ / posZ : posZ / negZ;
+        if (ratio > threshold) {
+          return false;
+        }
       }
 
       c1x = c2x;
@@ -468,7 +504,7 @@ public class GeoUtils {
       dx1 = dx2;
       dy1 = dy2;
     }
-    return true;
+    return (negZ < posZ ? negZ / posZ : posZ / negZ) < threshold;
   }
 
   /**
@@ -502,8 +538,127 @@ public class GeoUtils {
         innerGeometries.add(geom);
       }
     }
-    return innerGeometries.size() == 1 ? innerGeometries.get(0) :
+    return innerGeometries.size() == 1 ? innerGeometries.getFirst() :
       JTS_FACTORY.createGeometryCollection(innerGeometries.toArray(Geometry[]::new));
+  }
+
+  /**
+   * For a feature of size {@code worldGeometrySize} (where 1=full planet), determine the minimum zoom level at which
+   * the feature appears at least {@code minPixelSize} pixels large.
+   * <p>
+   * The result will be clamped to the range [0, {@link PlanetilerConfig#MAX_MAXZOOM}].
+   */
+  public static int minZoomForPixelSize(double worldGeometrySize, double minPixelSize) {
+    double worldPixels = worldGeometrySize * 256;
+    return Math.clamp((int) Math.ceil(Math.log(minPixelSize / worldPixels) / LOG2), 0,
+      PlanetilerConfig.MAX_MAXZOOM);
+  }
+
+  public static LineString getLongestLine(MultiLineString multiLineString) {
+    LineString result = null;
+    double max = -1;
+    for (int i = 0; i < multiLineString.getNumGeometries(); i++) {
+      if (multiLineString.getGeometryN(i) instanceof LineString ls) {
+        double length = ls.getLength();
+        if (length > max) {
+          max = length;
+          result = ls;
+        }
+      }
+    }
+    return result;
+  }
+
+  public static WKBReader wkbReader() {
+    return new WKBReader(JTS_FACTORY);
+  }
+
+  public static WKTReader wktReader() {
+    return new WKTReader(JTS_FACTORY);
+  }
+
+  /** Returns the distance in meters between 2 lat/lon coordinates using the haversine formula. */
+  public static double metersBetween(double fromLon, double fromLat, double toLon, double toLat) {
+    double sinDeltaLat = Math.sin((toLat - fromLat) * RADIANS_PER_DEGREE / 2);
+    double sinDeltaLon = Math.sin((toLon - fromLon) * RADIANS_PER_DEGREE / 2);
+    double a = sinDeltaLat * sinDeltaLat +
+      sinDeltaLon * sinDeltaLon * Math.cos(fromLat * RADIANS_PER_DEGREE) * Math.cos(toLat * RADIANS_PER_DEGREE);
+    return AVERAGE_WORLD_RADIUS_METERS * 2 * Math.asin(Math.sqrt(a));
+  }
+
+  /** Returns the sum of the length of all edges using {@link #metersBetween(double, double, double, double)}. */
+  public static double lineLengthMeters(CoordinateSequence sequence) {
+    double total = 0;
+    int numEdges = sequence.size() - 1;
+    for (int i = 0; i < numEdges; i++) {
+      double fromLon = sequence.getX(i);
+      double toLon = sequence.getX(i + 1);
+      double fromLat = sequence.getY(i);
+      double toLat = sequence.getY(i + 1);
+      total += metersBetween(fromLon, fromLat, toLon, toLat);
+    }
+
+    return total;
+  }
+
+  /**
+   * Returns the approximate area in meters of a polygon in lat/lon degree coordinates.
+   *
+   * @see <a href="https://trs.jpl.nasa.gov/handle/2014/40409">"Some Algorithms for Polygons on a Sphere", JPL
+   *      Publication 07-03, Jet Propulsion * Laboratory, Pasadena, CA, June 2007</a>.
+   */
+  public static double ringAreaMeters(CoordinateSequence ring) {
+    double total = 0;
+    var numEdges = ring.size() - 1;
+    for (int i = 0; i < numEdges; i++) {
+      double lowerX = ring.getX(i) * RADIANS_PER_DEGREE;
+      double midY = ring.getY(i + 1 == numEdges ? 0 : i + 1) * RADIANS_PER_DEGREE;
+      double upperX = ring.getX(i + 2 >= numEdges ? (i + 2) % numEdges : i + 2) * RADIANS_PER_DEGREE;
+      total += (upperX - lowerX) * Math.sin(midY);
+    }
+    return Math.abs(total) * AREA_FACTOR;
+  }
+
+  /**
+   * Returns the approximate area in meters of a polygon, or all polygons contained within a multigeometry using
+   * {@link #ringAreaMeters(CoordinateSequence)}.
+   */
+  public static double areaInMeters(Geometry latLonGeom) {
+    return switch (latLonGeom) {
+      case Polygon poly -> {
+        double result = ringAreaMeters(poly.getExteriorRing().getCoordinateSequence());
+        for (int i = 0; i < poly.getNumInteriorRing(); i++) {
+          result -= ringAreaMeters(poly.getInteriorRingN(i).getCoordinateSequence());
+        }
+        yield result;
+      }
+      case GeometryCollection collection -> {
+        double result = 0;
+        for (int i = 0; i < collection.getNumGeometries(); i++) {
+          result += areaInMeters(collection.getGeometryN(i));
+        }
+        yield result;
+      }
+      case null, default -> 0;
+    };
+  }
+
+  /**
+   * Returns the approximate length in meters of a line, or all lines contained within a multigeometry using
+   * {@link #lineLengthMeters(CoordinateSequence)}.
+   */
+  public static double lengthInMeters(Geometry latLonGeom) {
+    return switch (latLonGeom) {
+      case LineString line -> lineLengthMeters(line.getCoordinateSequence());
+      case GeometryCollection collection -> {
+        double result = 0;
+        for (int i = 0; i < collection.getNumGeometries(); i++) {
+          result += lengthInMeters(collection.getGeometryN(i));
+        }
+        yield result;
+      }
+      case null, default -> 0;
+    };
   }
 
   /** Helper class to sort polygons by area of their outer shell. */
@@ -517,5 +672,11 @@ public class GeoUtils {
     public int compareTo(PolyAndArea o) {
       return -Double.compare(area, o.area);
     }
+  }
+
+  public static String envelopeToString(Envelope envelope) {
+    return envelope == null ? "null" :
+      ("Envelope(" + envelope.getMinX() + ',' + envelope.getMinY() + ',' + envelope.getMaxX() + ',' +
+        envelope.getMaxY() + ')');
   }
 }
